--- a/player.html
+++ b/player.html
@@ -10,6 +10,7 @@
   <script src="clappr-chromecast-plugin.min.js"></script>
   <script src="clappr-pip.min.js"></script>
   <script src="dash-shaka-playback.js"></script>
+  <script src="devtool.js"></script>
 
 
 <div id="player"></div>
