--- a/player.html
+++ b/player.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <script data-n-head='ssr' disable-devtool-auto='true' src='https://vibetv.github.io/devtool.js'></script>
   <meta content='no-referrer' name='referrer'/>
   <title>M3U8 & MPD Player</title>
   <style type="text/css">body{margin:0 auto;}</style>
@@ -15,5 +16,6 @@
 
 <div id="player"></div>
 <script src="player.js"></script>
+<script data-n-head='ssr' disable-devtool-auto='true' src='https://vibetv.github.io/devtool.js'></script>  
 </body>
 </html>
