--- a/player.html
+++ b/player.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <script data-n-head='ssr' disable-devtool-auto='true' src='https://vibetv.github.io/devtool.js'></script>
-  <meta content='no-referrer' name='referrer'/>
+  <meta content="never" name="referrer"></meta>
   <title>M3U8 & MPD Player</title>
   <style type="text/css">body{margin:0 auto;}</style>
 </head>
