--- a/jwpkey.html
+++ b/jwpkey.html
@@ -1,4 +1,4 @@
-<html lang="es">
+<html lang="en">
 <head>
 <meta name="robots" content="noindex, nofollow" />
 <meta name="referrer" content="no-referrer" />
@@ -48,9 +48,10 @@ playerInstance.setup({
 	width: "100%",
 	height: "100%",
 	aspectratio: "16:9",
-	autostart: false,
+	autostart: true,
+	image: https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgppr0iTDZXAXl37o-hc4aZb0ZFxTskC-JYYFVrcRhtFPhH0Hnhdia765BaVCJJCj_bwY1wQPJAA-qGc3Y6mmc7uBgvTreZHBZ7tF_AI3AX3bad5EXOYSbZ9TD5k0bnr034ucYEFlyfc1s3HesRRvc5YKvKH3aWvVjlfJIvGIp9N2Tt5gjBemi4mXff/s1600/vibe%20TV.png,
 	cast: {},
-	sharing: {}
+	//sharing: {}
 });
 </script>
 </body>
