--- a/jwpkey.html
+++ b/jwpkey.html
@@ -1,58 +1,80 @@
 <html lang="en">
+
 <head>
-<meta name="robots" content="noindex, nofollow" />
-<meta name="referrer" content="no-referrer" />
-<style type="text/css">
-body {
-   margin: 0;
-   padding: 0;
-}#player{width:100%;height:100%;position:absolute;z-index:2;top:0;right:0;left:0;bottom:0}
-</style>
-<script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwplayer.js"></script>
-<script> jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
-</script>
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="referrer" content="no-referrer" />
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        #player {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0
+        }
+    </style>
+    <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwplayer.js"></script>
+    <script>
+        jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
+    </script>
 </head>
+
 <body>
-<script type="text/javascript">
-function getParameterByName(name) {
-	name = name.replace(/[\[]/, "\[").replace(/[\]]/, "\]");
-	var regex = new RegExp("[\?&]" + name + "=([^&#]*)"),
-	results = regex.exec(location.search);
-	return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-}
+    <script type="text/javascript">
+        function getParameterByName(name) {
+            name = name.replace(/[\[]/, "\[").replace(/[\]]/, "\]");
+            var regex = new RegExp("[\?&]" + name + "=([^&#]*)"),
+                results = regex.exec(location.search);
+            return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+        }
 
-var get = getParameterByName('get');
-var key = getParameterByName('key');
-var key2 = getParameterByName('key2');
-var getIMG = getParameterByName('img');
-</script>
-<div id="player"></div>
-<script type="text/javascript">
-var playerInstance = jwplayer("player");
+        var get = getParameterByName('get');
+        var key = getParameterByName('key');
+        var key2 = getParameterByName('key2');
+        var getIMG = getParameterByName('img');
+    </script>
+    <div id="player"></div>
+    <script type="text/javascript">
+        var playerInstance = jwplayer("player");
 
-playerInstance.setup({
-	playlist: [{
-		"image": atob(getIMG),
-		"sources": [
-			{
-				"default": false,
-				"type": "dash",
-				"file": atob(get),
-				"drm": {
-					"clearkey": { "keyId": atob(key), "key": atob(key2) }
-				},
-				"label": "0"
-			}
-		]
-	}],
-	width: "100%",
-	height: "100%",
-	aspectratio: "16:9",
-	autostart: false,
-	image: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgppr0iTDZXAXl37o-hc4aZb0ZFxTskC-JYYFVrcRhtFPhH0Hnhdia765BaVCJJCj_bwY1wQPJAA-qGc3Y6mmc7uBgvTreZHBZ7tF_AI3AX3bad5EXOYSbZ9TD5k0bnr034ucYEFlyfc1s3HesRRvc5YKvKH3aWvVjlfJIvGIp9N2Tt5gjBemi4mXff/s1600/vibe%20TV.png";,
-	cast: {},
-	//sharing: {}
-});
-</script>
+        playerInstance.setup({
+                    playlist: [{
+                        "image": atob(getIMG),
+                        "sources": [{
+                            "default": false,
+                            "type": "dash",
+                            "file": atob(get),
+                            "drm": {
+                                "clearkey": {
+                                    "keyId": atob(key),
+                                    "key": atob(key2)
+                                }
+                            },
+                            "label": "0"
+                        }]
+                    }],
+                    width: "100%",
+                    height: "100%",
+                    aspectratio: "16:9",
+                    autostart: false,
+                    image: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgppr0iTDZXAXl37o-hc4aZb0ZFxTskC-JYYFVrcRhtFPhH0Hnhdia765BaVCJJCj_bwY1wQPJAA-qGc3Y6mmc7uBgvTreZHBZ7tF_AI3AX3bad5EXOYSbZ9TD5k0bnr034ucYEFlyfc1s3HesRRvc5YKvKH3aWvVjlfJIvGIp9N2Tt5gjBemi4mXff/s1600/vibe%20TV.png";,
+                    cast: {},
+                    logo: {
+                        file: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhAJKdWlfMwm-TpE61YrnXHndAl_nnOVNsISsHWFNRBXul3VcyarqDSIbX_P7Fe4tnANqlNV9yxB0rWlwW-AbQYs-4ZOyTAPg5pAzCQ-gW6WQ1Z1mKEiStMOHi5nT68qHSVvq_gniJ5n-oPc_mW4d_WcBNjEXzC3A3YjJbDer1Kf2XMGEEPEBbFqT2iEA/s1600/VibeTV%20transparan.png";,
+                        //    hide: false;,
+                        //    link: https://t.me/paseotv,
+                        //    position: bottom-left
+                        //},	     
+                        //sharing: {}
+                    });
+    </script>
 </body>
+
 </html>
