--- a/jwpkey.html
+++ b/jwpkey.html
@@ -64,10 +64,10 @@
                     height: "100%",
                     aspectratio: "16:9",
                     autostart: false,
-                    image: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgppr0iTDZXAXl37o-hc4aZb0ZFxTskC-JYYFVrcRhtFPhH0Hnhdia765BaVCJJCj_bwY1wQPJAA-qGc3Y6mmc7uBgvTreZHBZ7tF_AI3AX3bad5EXOYSbZ9TD5k0bnr034ucYEFlyfc1s3HesRRvc5YKvKH3aWvVjlfJIvGIp9N2Tt5gjBemi4mXff/s1600/vibe%20TV.png";,
+                    image: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgppr0iTDZXAXl37o-hc4aZb0ZFxTskC-JYYFVrcRhtFPhH0Hnhdia765BaVCJJCj_bwY1wQPJAA-qGc3Y6mmc7uBgvTreZHBZ7tF_AI3AX3bad5EXOYSbZ9TD5k0bnr034ucYEFlyfc1s3HesRRvc5YKvKH3aWvVjlfJIvGIp9N2Tt5gjBemi4mXff/s1600/vibe%20TV.png",
                     cast: {},
                     logo: {
-                        file: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhAJKdWlfMwm-TpE61YrnXHndAl_nnOVNsISsHWFNRBXul3VcyarqDSIbX_P7Fe4tnANqlNV9yxB0rWlwW-AbQYs-4ZOyTAPg5pAzCQ-gW6WQ1Z1mKEiStMOHi5nT68qHSVvq_gniJ5n-oPc_mW4d_WcBNjEXzC3A3YjJbDer1Kf2XMGEEPEBbFqT2iEA/s1600/VibeTV%20transparan.png";,
+                        file: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhAJKdWlfMwm-TpE61YrnXHndAl_nnOVNsISsHWFNRBXul3VcyarqDSIbX_P7Fe4tnANqlNV9yxB0rWlwW-AbQYs-4ZOyTAPg5pAzCQ-gW6WQ1Z1mKEiStMOHi5nT68qHSVvq_gniJ5n-oPc_mW4d_WcBNjEXzC3A3YjJbDer1Kf2XMGEEPEBbFqT2iEA/s1600/VibeTV%20transparan.png",
                         //    hide: false;,
                         //    link: https://t.me/paseotv,
                         //    position: bottom-left
