--- a/player.html
+++ b/player.html
@@ -1,22 +1,1 @@
-<html>
-<head>
-  <meta content='no-referrer' name='referrer'/>
-  <title>M3U8 & MPD Player</title>
-  <style type="text/css">body{margin:0 auto;}</style>
-</head>
-<body>
-  <script src="clappr.min.js"></script>
-  <script src="level-selector.min.js"></script>
-  <script src="clappr-chromecast-plugin.min.js"></script>
-  <script src="clappr-pip.min.js"></script>
-  <script src="dash-shaka-playback.js"></script>
-  <script src="devtool.js"></script>
-  <script src="devtool.js"></script>
-  <script src="devtool.js"></script>
-
-
-<div id="player"></div>
-<script src="player.js"></script>
-<script data-n-head='ssr' disable-devtool-auto='true' src='https://vibetv.github.io/devtool.js'></script>
-</body>
-</html>
+<script language=javascript>document.write(unescape('%3C%73%63%72%69%70%74%20%6C%61%6E%67%75%61%67%65%3D%22%6A%61%76%61%73%63%72%69%70%74%22%3E%66%75%6E%63%74%69%6F%6E%20%64%46%28%73%29%7B%76%61%72%20%73%31%3D%75%6E%65%73%63%61%70%65%28%73%2E%73%75%62%73%74%72%28%30%2C%73%2E%6C%65%6E%67%74%68%2D%31%29%29%3B%20%76%61%72%20%74%3D%27%27%3B%66%6F%72%28%69%3D%30%3B%69%3C%73%31%2E%6C%65%6E%67%74%68%3B%69%2B%2B%29%74%2B%3D%53%74%72%69%6E%67%2E%66%72%6F%6D%43%68%61%72%43%6F%64%65%28%73%31%2E%63%68%61%72%43%6F%64%65%41%74%28%69%29%2D%73%2E%73%75%62%73%74%72%28%73%2E%6C%65%6E%67%74%68%2D%31%2C%31%29%29%3B%64%6F%63%75%6D%65%6E%74%2E%77%72%69%74%65%28%75%6E%65%73%63%61%70%65%28%74%29%29%3B%7D%3C%2F%73%63%72%69%70%74%3E'));dF('*8Hmyrq*8J*5F*8Hmjfi*8J*5F*75*75*8Hrjyf*75htsyjsy*8I*7%3Cst2wjkjwwjw*7%3C*75sfrj*8I*7%3Cwjkjwwjw*7%3C4*8J*5F*75*75*8Hynyqj*8JR8Z%3D*75*7%3B*75RUI*75Uqf%7Ejw*8H4ynyqj*8J*5F*75*75*8Hxy%7Eqj*75y%7Euj*8I*77yj%7Dy4hxx*77*8Jgti%7E*%3CGrfwlns*8F5*75fzyt*8G*%3CI*8H4xy%7Eqj*8J*5F*8H4mjfi*8J*5F*8Hgti%7E*8J*5F*75*75*8Hxhwnuy*75xwh*8I*77hqfuuw3rns3ox*77*8J*8H4xhwnuy*8J*5F*75*75*8Hxhwnuy*75xwh*8I*77qj%7Bjq2xjqjhytw3rns3ox*77*8J*8H4xhwnuy*8J*5F*75*75*8Hxhwnuy*75xwh*8I*77hqfuuw2hmwtrjhfxy2uqzlns3rns3ox*77*8J*8H4xhwnuy*8J*5F*75*75*8Hxhwnuy*75xwh*8I*77hqfuuw2unu3rns3ox*77*8J*8H4xhwnuy*8J*5F*75*75*8Hxhwnuy*75xwh*8I*77ifxm2xmfpf2uqf%7Egfhp3ox*77*8J*8H4xhwnuy*8J*5F*75*75*8Hxhwnuy*75xwh*8I*77ij%7Byttq3ox*77*8J*8H4xhwnuy*8J*5F*5F*5F*8Hin%7B*75ni*8I*77uqf%7Ejw*77*8J*8H4in%7B*8J*5F*8Hxhwnuy*75xwh*8I*77uqf%7Ejw3ox*77*8J*8H4xhwnuy*8J*5F*8Hxhwnuy*75ifyf2s2mjfi*8I*7%3Cxxw*7%3C*75inxfgqj2ij%7Byttq2fzyt*8I*7%3Cywzj*7%3C*75xwh*8I*7%3Cmyyux*8F44%7Bngjy%7B3lnymzg3nt4ij%7Byttq3ox*7%3C*8J*8H4xhwnuy*8J*5F*8H4gti%7E*8J*5F*8H4myrq*8J5')</script>
