--- a/jwpkey.html
+++ b/jwpkey.html
@@ -62,7 +62,7 @@
                 }]
             }],
             hide: false,
-            position: bottom-left,
+            position: bottom-left
             width: "100%",
             height: "100%",
             aspectratio: "16:9",
