--- a/jwpkey.html
+++ b/jwpkey.html
@@ -49,7 +49,7 @@
                 "image": atob(getIMG),
                 "sources": [{
                     "default": false,
-                    "type": "dash",
+                    "type": "application/dash+xml",
                     "file": atob(get),
                     "drm": {
                         "clearkey": {
