--- a/coba.html
+++ b/coba.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <title>LSBTV - VIDIO EVENT </title>
+ <link rel="stylesheet" href="https://lsbtv.livestreaming.repl.co/style.css" />
 </head>
 
-<a href="intent:https://vibetv.github.io/tes.mp4#Intent;scheme=https;type=video/*;package=com.genuine.leone;S.browser_fallback_url=market://details?id=com.genuine.leone.ad;S.title=LSBTV;end"> <img src="https://i.ytimg.com/vi/owmXaaDDliI/maxresdefault.jpg" style="width:100%"></a>
+<a href="intent://production-drm-vidio-com-event-7.akamaized.net/out/v1/fb3777ee16104dcd8722bb42560cef6f/index.mpd|drmScheme=clearkey&drmLicense=https://lsbtv.livestreaming.repl.co/pemutar/nsplayer/live7key.html#Intent;scheme=https;type=video/*;package=com.genuine.leone;S.browser_fallback_url=market://details?id=com.genuine.leone.ad;S.title=LSBTV;end"> <img src="https://lsbtv.livestreaming.repl.co/posterns.jpg" style="width:100%"></a>
