--- a/jwpkey.html
+++ b/jwpkey.html
@@ -1,4 +1,4 @@
-<html lang="id">
+<html lang="en">
 
 <head>
     <meta name="robots" content="noindex, nofollow" />
@@ -21,6 +21,8 @@
         }
     </style>
     <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwplayer.js"></script>
+    <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/provider.shaka.js"></script>
+    <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/polyfills.webvtt.js"></script>
     <script>
         jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
     </script>
