--- a/jwpkey.html
+++ b/jwpkey.html
@@ -1,6 +1,8 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" charset="utf-8" async="" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
+    <script type="text/javascript" charset="utf-8" async="" src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwpsrv.js"></script>
     <meta name="robots" content="noindex, nofollow" />
     <meta name="referrer" content="no-referrer" />
     <style type="text/css">
