--- a/jwpkey.html
+++ b/jwpkey.html
@@ -1,9 +1,8 @@
 <html lang="en">
 
 <head>
-    <script type="text/javascript" charset="utf-8" async="" src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwpsrv.js"></script>
     <meta name="robots" content="noindex, nofollow" />
-    <meta name="referrer" content="no-referrer" />
+    <!--<meta name="referrer" content="no-referrer" />-->
     <style type="text/css">
         body {
             margin: 0;
@@ -21,6 +20,7 @@
             bottom: 0
         }
     </style>
+    <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwpsrv.js"></script>
     <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwplayer.js"></script>
     <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/provider.shaka.js"></script>
     <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/polyfills.webvtt.js"></script>
