--- a/jwpkey.html
+++ b/jwpkey.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="robots" content="noindex, nofollow" />
-    <!--<meta name="referrer" content="no-referrer" />-->
+    <meta name="referrer" content="no-referrer" />
     <style type="text/css">
         body {
             margin: 0;
@@ -24,7 +24,6 @@
     <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/jwplayer.js"></script>
     <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/provider.shaka.js"></script>
     <script src="https://ssl.p.jwpcdn.com/player/v/8.27.1/polyfills.webvtt.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script>
         jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
     </script>
@@ -67,7 +66,7 @@
             width: "100%",
             height: "100%",
             aspectratio: "16:9",
-            autostart: true,
+            autostart: false,
             cast: {},
             //sharing: {}
         });
