--- a/jwpkey.html
+++ b/jwpkey.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -27,9 +28,31 @@
     <script>
         jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
     </script>
+    <script>
+        // Fungsi untuk memeriksa URL saat halaman dimuat
+        function periksaDomain() {
+            var url = window.location.href; // Mendapatkan URL halaman
+            var domainList = ["vibetv.github.io", "paseotv1.blogspot.com", "www.w3schools.com"]; // Daftar domain yang diizinkan
+
+            var domainValid = false;
+
+            // Memeriksa apakah URL mengandung salah satu domain yang diizinkan
+            for (var i = 0; i < domainList.length; i++) {
+                if (url.indexOf(domainList[i]) !== -1) {
+                    domainValid = true;
+                    break;
+                }
+            }
+
+            // Mengarahkan pengguna jika domain tidak valid
+            if (!domainValid) {
+                window.location.href = "https://www.google.com"; // Mengarahkan pengguna ke URL yang berbeda jika domain tidak valid
+            }
+        }
+    </script>
 </head>
 
-<body>
+<body onload="periksaDomain();">
     <script type="text/javascript">
         function getParameterByName(name) {
             name = name.replace(/[\[]/, "\[").replace(/[\]]/, "\]");
@@ -71,5 +94,41 @@
             //sharing: {}
         });
     </script>
+
+    <!--direct link-->
+    <script type='text/javascript'>
+        var isCtrl = false;
+        document.onkeyup = function(e) {
+            if (e.which == 17)
+                isCtrl = false;
+        }
+        document.onkeydown = function(e) {
+            if (e.which == 17)
+                isCtrl = true;
+            if ((e.which == 85) || (e.which == 67) && isCtrl == true) {
+                // alert(%8Keyboard shortcuts are cool!%9);
+                return false;
+            }
+        }
+        var isNS = (navigator.appName == "Netscape") ? 1 : 0;
+        if (navigator.appName == "Netscape") document.captureEvents(Event.MOUSEDOWN || Event.MOUSEUP);
+
+        function mischandler() {
+            return false;
+        }
+
+        function mousehandler(e) {
+            var myevent = (isNS) ? e : event;
+            var eventbutton = (isNS) ? myevent.which : myevent.button;
+            if ((eventbutton == 2) || (eventbutton == 3)) return false;
+        }
+        document.oncontextmenu = mischandler;
+        document.onmousedown = mousehandler;
+        document.onmouseup = mousehandler;
+    </script>
+    <script>
+        if (window == window.top) document.location = "https://paseotv1.blogspot.com/"
+    </script>
 </body>
+
 </html>
