--- a/jwpkey.html
+++ b/jwpkey.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="robots" content="noindex, nofollow" />
     <meta name="referrer" content="no-referrer" />
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://vibetv.github.io;"/>
     <style type="text/css">
         body {
             margin: 0;
