--- a/iframe.html
+++ b/iframe.html
@@ -1,1 +1,28 @@
-<div style="position: relative; padding-top: 56.25%;"><iframe src="https://embedstream.me/angel-city-w-vs-chicago-w-stream-1" style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture, allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation;" allowfullscreen="true"referrerpolicy='unsafe-url'></iframe></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Halaman Dapat di-iframe untuk 1 Domain</title>
+  <meta name="referrer" content="no-referrer" />
+  <script>
+    // Fungsi untuk memeriksa domain saat halaman dimuat
+    function periksaDomain() {
+      var url = window.location.href; // Mendapatkan URL halaman
+      var domain = "blog1.okstream.xyz"; // Domain yang diizinkan
+
+      // Memeriksa apakah URL mengandung domain yang diizinkan
+      if (url.indexOf(domain) === -1) {
+        window.location.href = "https://www.google.com"; // Mengarahkan pengguna ke URL yang berbeda jika domain tidak valid
+      } else {
+        var iframe = document.getElementById("my-iframe"); // Mendapatkan elemen iframe
+        iframe.src = "https://www.youtube.com/embed/GY55ZYJvCgY"; // Mengatur URL konten iframe
+      }
+    }
+  </script>
+</head>
+<body onload="periksaDomain();">
+  <h1>Halaman Dapat di-iframe untuk 1 Domain</h1>
+  <p>Halaman ini dapat di-iframe hanya oleh domain contoh.com.</p>
+
+  <iframe id="my-iframe" width="100%" height="500" frameborder="0"></iframe>
+</body>
+</html>
