--- a/iframe.html
+++ b/iframe.html
@@ -23,6 +23,6 @@
   <h1>Halaman Dapat di-iframe untuk 1 Domain</h1>
   <p>Halaman ini dapat di-iframe hanya oleh domain contoh.com.</p>
 
-  <iframe id="my-iframe" width="100%" height="500" frameborder="0"></iframe>
+  <iframe id="my-iframe" width="100%" height="100%" frameborder="0"></iframe>
 </body>
 </html>
