--- a/jwpkey.html
+++ b/jwpkey.html
@@ -54,7 +54,7 @@
 
     <script type="text/javascript">
         var BLOCKED_URL = ' ';
-        var FORWARDING_URL = 'https://vibetv.github.io/jwpkey.html';
+        var FORWARDING_URL = 'https://vibetv.github.io';
         if (document.referrer == BLOCKED_URL) {
             location.href = FORWARDING_URL;
         }
