--- a/jwpkey.html
+++ b/jwpkey.html
@@ -34,7 +34,7 @@
         // Fungsi untuk memeriksa URL saat halaman dimuat
         function periksaDomain() {
             var url = window.location.href; // Mendapatkan URL halaman
-            var domainList = ["vibetv.github.io", "paseotv2.blogspot.com", "www.w3schools.com"]; // Daftar domain yang diizinkan
+            var domainList = ["vibetv.github.io", "match.okstream.xyz", "www.w3schools.com"]; // Daftar domain yang diizinkan
 
             var domainValid = false;
 
