--- a/jwpkey.html
+++ b/jwpkey.html
@@ -4,7 +4,6 @@
 <head>
     <meta name="robots" content="noindex, nofollow" />
     <meta name="referrer" content="no-referrer" />
-    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://paseotv2.blogspot.com;" />
     
     <style type="text/css">
         body {
@@ -30,7 +29,7 @@
     <script>
         jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
     </script>
-    <script>
+    <!--<script>
         // Fungsi untuk memeriksa URL saat halaman dimuat
         function periksaDomain() {
             var url = window.location.href; // Mendapatkan URL halaman
@@ -51,7 +50,7 @@
                 window.location.href = "https://www.google.com"; // Mengarahkan pengguna ke URL yang berbeda jika domain tidak valid
             }
         }
-    </script>
+    </script>-->
 
 </head>
 
