--- a/play.html
+++ b/play.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 <html>
 <head>
+  <meta content='no-referrer' name='referrer'/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/video.js/8.5.2/alt/video-js-cdn.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/8.5.2/video.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/3.0.2/videojs-contrib-hls.js"></script>
