--- a/flv.html
+++ b/flv.html
@@ -291,7 +291,7 @@ var gid = encodeURIComponent(id);
       }
 </style>
 
-<div id="mcqueentv" style="width:100%;height:100%;overflow:hidden;" class="dplayer dplayer-no-danmaku dplayer-paused"><div class="dplayer-mask dplayer-mask-show" style="display: none;"></div>
+<div id="okstreamtv" style="width:100%;height:100%;overflow:hidden;" class="dplayer dplayer-no-danmaku dplayer-paused"><div class="dplayer-mask dplayer-mask-show" style="display: none;"></div>
 <div class="dplayer-video-wrap">
     
 <video class="dplayer-video dplayer-video-current" webkit-playsinline="" x-webkit-airplay="allow" playsinline="" poster="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjkRh_hfeVX_58xH-WPErb0Qw4FysejxQ4K1d3_Vtt2MvfK28roLIhKoTUNKwz2caGfHBSxNKyh3fW_5CfmivnJv9CXvEuh1EWXXBL46s7du_PjnRv35OqXisJ1JboFEYoKoCz1oTUxGQ4wEwQvgI7pr9nbbTaAUd9RKgycXYUAwtNvD49MUOxU2JuGr9c/s1600/siaranhpokstreamtv.png" preload="metadata">
@@ -302,8 +302,8 @@ var gid = encodeURIComponent(id);
 
 <script>
         var id = J_get('file');
-    var dp=new DPlayer({container: document.getElementById('mcqueentv'),theme:"#ffffff",loop:false,autoplay:false,hotkey:true, preload:"metadata", mutex:true, video: { quality: [{ url: ""+id+"","name":"TELEGRAM @OKSTREAMTV", type: 'auto', }, ], defaultQuality: 0, pic: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjkRh_hfeVX_58xH-WPErb0Qw4FysejxQ4K1d3_Vtt2MvfK28roLIhKoTUNKwz2caGfHBSxNKyh3fW_5CfmivnJv9CXvEuh1EWXXBL46s7du_PjnRv35OqXisJ1JboFEYoKoCz1oTUxGQ4wEwQvgI7pr9nbbTaAUd9RKgycXYUAwtNvD49MUOxU2JuGr9c/s1600/siaranhpokstreamtv.png', referrerPolicy:"no-referrer"},}); 
-   document.getElementById('mcqueentv').oncontextmenu = function () {
+    var dp=new DPlayer({container: document.getElementById('okstreamtv'),theme:"#ffffff",loop:false,autoplay:false,hotkey:true, preload:"metadata", mutex:true, video: { quality: [{ url: ""+id+"","name":"@OKSTREAMTV", type: 'auto', }, ], defaultQuality: 0, pic: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjkRh_hfeVX_58xH-WPErb0Qw4FysejxQ4K1d3_Vtt2MvfK28roLIhKoTUNKwz2caGfHBSxNKyh3fW_5CfmivnJv9CXvEuh1EWXXBL46s7du_PjnRv35OqXisJ1JboFEYoKoCz1oTUxGQ4wEwQvgI7pr9nbbTaAUd9RKgycXYUAwtNvD49MUOxU2JuGr9c/s1600/siaranhpokstreamtv.png', referrerPolicy:"no-referrer"},}); 
+   document.getElementById('okstreamtv').oncontextmenu = function () {
             document.querySelector('.dplayer-menu').style.display = "none";
             document.querySelector('.dplayer-mask').style.display = "none";
     return false;
