--- a/video.html
+++ b/video.html
@@ -84,7 +84,7 @@
     <div class="container">
 
         <video id="myVideo" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay preload="auto" data-setup='{}' poster="">
-            <source id="source" type="application/x-mpegURL">
+            <source id="source" src=" " type="application/x-mpegURL">
             </source>
         </video>
 
