--- a/shaka.html
+++ b/shaka.html
@@ -3,9 +3,13 @@
 <head>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
 <meta name="referrer" content="no-referrer"/>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.3/shaka-player.ui.min.js' crossorigin='anonymous'></script>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/Arjunaaaaa/lsbtv/shakacontrol.css' crossorigin='anonymous'/>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/Arjunaaaaa/lsbtv/gaya.css' crossorigin='anonymous'/>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.4.1/controls.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.4.1/shaka-player.ui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.4.1/shaka-player.compiled.js"></script>
+<script defer src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+	
+<!--<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/Arjunaaaaa/lsbtv/shakacontrol.css' crossorigin='anonymous'/>-->
+<!--<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/Arjunaaaaa/lsbtv/gaya.css' crossorigin='anonymous'/>-->
 
 </head>
 <body>
