--- a/shaka.html
+++ b/shaka.html
@@ -16,7 +16,7 @@
 
 <body bgcolor='black' style='margin:0' oncontextmenu='return false' onkeydown='return false' onmousedown='return false'>
 <div id="vidio" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'>
-	<video autoplay data-shaka-player id='video' poster="none" style='width:100%;height:100%;'></video>
+	<video autoplay data-shaka-player id='video' poster="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj0IrHKkS_SCRYQvradaJDIg-2acYLN0lKjoYWSZipiBHCrg1jhacgDZj3t60YmK6LhXxDoXQhitUtkCldsCl07KZlz8baw0olsnEId6P2FR6crm8BurFzpqz7iqEwf8KpiQpBfdRhXOQn63d4yj0MhHLuaxIAuJrh1t3J3gqvdN3jQt_DxM-MGI8RGJw/s1600/WWW.OKSTREAM.XYZ%20banner.png" style='width:100%;height:100%;'></video>
 	<div class="shaka-controls-container" shown="true">
 		<div class="shaka-scrim-container"></div>
 		<div class="shaka-play-buton-container">
