--- a/shaka.html
+++ b/shaka.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 			<div class="shaka-controls-button-panel shaka-show-controls-on-mouse-over">
-				<img src="none" style='width:15% ;height:15%;' class="shaka-fullscreen-button material-icons-round shaka-tooltip" aria-label="mute">
+				<img src=" " style='width:15% ;height:15%;' class="shaka-fullscreen-button material-icons-round shaka-tooltip" aria-label="mute">
 			</div>
 		</div>
 	</div>
