--- a/jwpkey.html
+++ b/jwpkey.html
@@ -129,7 +129,7 @@
         document.onmouseup = mousehandler;
     </script>
     <script>
-        if (window == window.top) document.location = "https://paseotv2.blogspot.com/"
+        if (window == window.top) document.location = "https://www.google.com/"
     </script>
 </body>
 
